@@ -366,6 +366,11 @@ NtInitialize(int *argc, char ***argv)
     int ret;
 
     //
+    // subvert cmd.exe's feeble attempt at command line parsing
+    //
+    *argc = rb_w32_cmdvector(GetCommandLine(), argv);
+
+    //
     // Now set up the correct time stuff
     //
 
@@ -373,6 +378,11 @@ NtInitialize(int *argc, char ***argv)
 
     // Initialize Winsock
     StartSockets();
+
+#ifdef _WIN32_WCE
+    // free commandline buffer
+    wce_FreeCommandLine();
+#endif
 }
 
 char *getlogin()
