@@ -1,6 +1,15 @@
+Wed May 18 23:39:09 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (glob_helper): get rid of using String.  [ruby-dev:26180]
+
+	* dir.c (push_braces): should skip balanced braces.
+
+	* eval.c (ruby_options), win32/win32.c (NtInitialize): move argument
+	  intialization back.  [ruby-dev:26180]
+
 Tue May 17 15:31:31 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>
 
-	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should 
+	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should
 	  break the loop if the socket reached to EOF. [ruby-talk:142285]
 
 Tue May 17 11:52:18 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
